crates/ruff_linter/src/rules/fastapi/snapshots/ruff_linter__rules__fastapi__tests__fast-api-non-annotated-dependency_FAST002_1.py_py38.snap
---
source: crates/ruff_linter/src/rules/fastapi/mod.rs
---
FAST002_1.py:10:13: FAST002 (fast-api-non-annotated-dependency) [*] FastAPI dependency without `Annotated`
   |
 9 | @app.get("/test")
10 | def handler(echo: str = Query("")):
   |             ^^^^^^^^^^^^^^^^^^^^^ FAST002 (fast-api-non-annotated-dependency)
11 |     return echo
   |
   = help: Replace with `typing_extensions.Annotated`

ℹ Unsafe fix
2  2  | values. See #15043 for more details."""
3  3  | 
4  4  | from fastapi import FastAPI, Query
   5  |+from typing_extensions import Annotated
5  6  | 
6  7  | app = FastAPI()
7  8  | 
8  9  | 
9  10 | @app.get("/test")
10    |-def handler(echo: str = Query("")):
   11 |+def handler(echo: Annotated[str, Query()] = ""):
11 12 |     return echo
12 13 | 
13 14 | 

FAST002_1.py:15:14: FAST002 (fast-api-non-annotated-dependency) [*] FastAPI dependency without `Annotated`
   |
14 | @app.get("/test")
15 | def handler2(echo: str = Query(default="")):
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ FAST002 (fast-api-non-annotated-dependency)
16 |     return echo
   |
   = help: Replace with `typing_extensions.Annotated`

ℹ Unsafe fix
2  2  | values. See #15043 for more details."""
3  3  | 
4  4  | from fastapi import FastAPI, Query
   5  |+from typing_extensions import Annotated
5  6  | 
6  7  | app = FastAPI()
7  8  | 
--------------------------------------------------------------------------------
12 13 | 
13 14 | 
14 15 | @app.get("/test")
15    |-def handler2(echo: str = Query(default="")):
   16 |+def handler2(echo: Annotated[str, Query()] = ""):
16 17 |     return echo
17 18 | 
18 19 | 

FAST002_1.py:20:14: FAST002 (fast-api-non-annotated-dependency) [*] FastAPI dependency without `Annotated`
   |
19 | @app.get("/test")
20 | def handler3(echo: str = Query("123", min_length=3, max_length=50)):
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ FAST002 (fast-api-non-annotated-dependency)
21 |     return echo
   |
   = help: Replace with `typing_extensions.Annotated`

ℹ Unsafe fix
2  2  | values. See #15043 for more details."""
3  3  | 
4  4  | from fastapi import FastAPI, Query
   5  |+from typing_extensions import Annotated
5  6  | 
6  7  | app = FastAPI()
7  8  | 
--------------------------------------------------------------------------------
17 18 | 
18 19 | 
19 20 | @app.get("/test")
20    |-def handler3(echo: str = Query("123", min_length=3, max_length=50)):
   21 |+def handler3(echo: Annotated[str, Query(min_length=3, max_length=50)] = "123"):
21 22 |     return echo
